--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p class="text"> Login Form</p>
             <input type="user" placeholder="User Name">
             <input type="password" placeholder="Password">
-            <button class="button">Sign in</button>
+            <button class="button"><a href="">Sign in</a></button>
         </div>
 
         <div class="blok-2">
